@startuml Módulo Usuários (Visão Expandida)
skinparam classAttributeIconSize 0
left to right direction

package "Módulo Usuários" #EBF5FB {
    abstract class Usuario {
        - {static} cod_sequencial : int = 0
        # id : int
        # nome : String
        # cpf : String
        # email : String
        # senha : String
        # dataNascimento : String
        # telefone : String
        # tipoUsuario : String
        # statusPerfil : Status
        --
        + Usuario(...)
        + {static} autenticar(...): Usuario
        + encerrarPerfil(...) : void
        + alterarDados(...) : void
        + visualizarDados() : String
        + getTipoUsuario() : String
        + getNome() : String
        + getSenha() : String
        + getCpf() : String
        + getStatus() : Status
        + getEmail() : String
        + getDataNascimento() : String
        + getTelefone() : String
        + setStatus(...) : void
        + getId() : int
        + setId(...) : void
    }

    class Cliente {
        ~ listaContas : ArrayList<Conta>
        --
        + Cliente(...)
        + alterarDados(...) : void 
        + visualizarDados() : String 
        + abrirConta(...) : void
        + fecharConta(...) : boolean
        + obterContas() : ArrayList<Conta>
    }

    class Administrador {
        - matricula : String
        --
        + Administrador(...)
        + alterarDados(...) : void 
        + visualizarDados() : String 
        + consultarCliente(...) : Cliente
        + desativarConta(...) : boolean
        + ativarConta(...) : boolean
        + desativarPerfilCliente(...) : boolean
        + ativarPerfilCliente(...) : boolean
        + visualizarHistoricoConta(...) : ArrayList<Transacao>
        + analisarPedidoLimite(...) : boolean
        + gerarRelatorioFintech(...) : String
        + getMatricula() : String
    }
    
    Cliente -down-|> Usuario
    Administrador -down-|> Usuario
}

package "Módulo Contas" #FEF9E7 {
    abstract class Conta <<abstract>>
}

package "Módulo Operações" #E8F8F5 {
    class Transacao
    class Cartao
    enum Status <<enum>>
    enum Justificativa <<enum>>
}

Usuario "1" o-- "0..*" Conta 
Usuario --> Status : possui
Administrador ..> Cartao : analisa limite
Administrador ..> Transacao : visualiza histórico
@enduml